--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@emotion/styled": "^11.10.5",
     "@fullcalendar/core": "^6.1.0",
     "@fullcalendar/daygrid": "^6.1.0",
+    "@fullcalendar/interaction": "^6.1.1",
     "@fullcalendar/list": "^6.1.0",
+    "@fullcalendar/react": "^6.1.2",
     "@fullcalendar/timegrid": "^6.1.0",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.6",
@@ -16,6 +18,7 @@
     "@nivo/core": "^0.80.0",
     "@nivo/geo": "^0.80.0",
     "@nivo/line": "^0.80.0",
+    "@nivo/pie": "^0.80.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
